# Basic-CMake-Project

./: CMakeLists.txt  main.cpp
include/: A.h  DynamicLib.h  funcs.h
include/libstatic/: StaticLib.h
include/libtemplate/: Template.h
src/: A.cpp  DynamicLib.cpp  StaticLib.cpp
tests/: CMakeLists.txt  catch2Main.cpp  testA.cpp  testDynamicLib.cpp  testFuncs.cpp  testStaticLib.cpp
